--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,12 @@
-sonar.projectKey=Damngz_shibuya-angular
-sonar.organization=damngz
-sonar.host.url=https://sonarcloud.io
+sonar.host.url=http://localhost:9000
+sonar.projectKey=A123
+sonar.projectName=shibuya-angular
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.language=ts
-sonar.exclusions=**/node_modules/**, **/dist/**
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.exclusions=**/node_modules/**, **/dist/**, src/main.ts
+sonar.tests=src
+sonar.test.inclusions=**/*.spec.ts
+sonar.typescript.lcov.reportPaths=coverage/lcov-report/lcov.info
+sonar.login=sqa_d940f9f0237af0e3c93aa966413b9de29214eb64
